# sayatis

./: .gitignore  README.md  gunicorn.service  nginx.conf  pyproject.toml  requirements.txt
sayatis/: manage.py
sayatis/home/: urls.py  views.py
sayatis/home/static/css/: style.css
sayatis/home/static/js/: main.js
sayatis/home/templates/home/: index-fa.html  index.html
sayatis/sayatis/: asgi.py  settings.py  urls.py  wsgi.py
