[tool.poetry]
name = "sayatis-intro"
version = "0.1.0"
description = ""
authors = ["amiwrpremium <83715695+amiwrpremium@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sayatis_intro"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
