[tool.poetry]
name = "sayatis-intro"
version = "0.1.0"
description = ""
authors = ["amiwrpremium <83715695+amiwrpremium@users.noreply.github.com>"]
packages = [{include = "sayatis_intro"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
